# bidon_backend

./: .codecov.yml  .dockerignore  .editorconfig  .env.sample  .env.test.sample  .gitignore  .gitmodules  .golangci.yml  .pre-commit-config.yaml  Cargo.toml  Dockerfile  Makefile  README.md  buf.gen.yaml  buf.yaml  build.rs  codecov.yml  debezium.json  docker-compose-prod.yml  docker-compose-test.yml  docker-compose.go-test.yml  docker-compose.go.yml  docker-compose.yml  go.mod  go.sum  nginx.conf
.github/: dependabot.yml
.github/workflows/: autodeploy-main-api.yml  autodeploy-main-back.yml  bidon_api.lint.yml  bidon_api.rubocop.yml  bidon_back.lint.yml  bidon_ui.lint.yml  build.yml  deploy-api-prod.yml  deploy-back-prod.yml  deploy.yml  go-check-pr.yml  go-run-tests.yml  k8s-dfw-bidon-deploy.yml  pre-commit-checks.yml  prod-build-deploy.yml  prod-build.yml  prod-deploy.yml  prod-proxy-traffic.yml  release-nightly.yml  release.yml  rspec.yml  rust.yml  stage-build.yml  sync_repo.yml  trivy.yml
api/: admin_api.yml
bidon_api/: .editorconfig  .env.sample  .gitignore  .irbrc  .rspec  .rubocop.yml  Dockerfile  Gemfile  README.md  dip.yml  karafka.rb
bidon_api/config/: application.rb  credentials.yml.enc  database.yml  puma.rb  routes.rb
bidon_api/db/: schema.rb
bidon_api/json_schema/: auction.json  bidding.json  config.json  iap.json  loss.json  show.json  stats.json  win.json
bidon_api/spec/: rails_helper.rb
bidon_back/: .env.sample  .rubocop.yml  Dockerfile  Gemfile  README.md  dip.yml
bidon_back/config/: application.rb  cable.yml  credentials.yml.enc  database.yml  puma.rb  routes.rb
bidon_back/db/: schema.rb
bidon_back/spec/: rails_helper.rb  spec_helper.rb
cmd/bidon-admin/: main.go
cmd/bidon-migrate/: main.go
cmd/bidon-sdkapi/: main.go
cmd/bidon-seed/: main.go
config/: cache.go  config.go  demand.go  echo.go  echo_test.go  grpc.go  kafka.go  logger.go  otel.go  redis.go  redis_cache.go  sentry.go
copilot/: .env.example  Makefile  README.md  README_AGENT.md  langgraph.json  pyproject.toml
copilot/.github/workflows/: integration-tests.yml  unit-tests.yml
copilot/src/agent/: graph.py
docker/kafka-connect/: Dockerfile  connector-config.template.json  create-connector.sh
docker/nginx/: nginx.conf
docker/redis/: Dockerfile  entrypoint.sh
internal/ad/: ad.go
internal/adapter/: adapter.go  adapter_test.go
internal/admin/: admin.go  admin_mocks_test.go  admin_test.go  api_key.go  app.go  app_demand_profile.go  app_demand_profile_mocks_test.go  app_demand_profile_test.go  app_demand_profile_unexp_test.go  app_mocks_test.go  app_test.go  auction_configuration.go  auction_configuration_v2.go  country.go  country_test.go  demand_source.go  demand_source_account.go  demand_source_account_mocks_test.go  demand_source_account_test.go  demand_source_mocks_test.go  demand_source_test.go  line_item.go  line_item_test.go  mocks_test.go  permission.go  permission_test.go  resource.go  resource_mocks_test.go  resource_scopes.go  resource_scopes_mocks_test.go  resource_scopes_test.go  resource_test.go  segment.go  settings.go  settings_test.go  user.go  user_mocks_test.go  user_test.go  validations.go
internal/auction/: auction.go  builder.go  builder_test.go  builder_v2.go  builder_v2_test.go  mocks_test.go  service.go  service_price_floor_test.go  service_test.go
internal/auctionv2/: builder.go  builder_test.go  service.go  service_price_floor_test.go  service_test.go
internal/bidding/: bid_cacher.go  bid_cacher_test.go  bidding.go  builder.go  builder_test.go
internal/config/: config.go  config_test.go  mocks_test.go
internal/db/: api_keys.gen.go  app_demand_profile_hooks.go  app_demand_profiles.gen.go  app_hooks.go  apps.gen.go  auction_configuration.go  auction_configuration_hooks.go  auction_configurations.gen.go  countries.gen.go  db.go  demand_source_account_hooks.go  demand_source_accounts.gen.go  demand_sources.gen.go  line_item_hooks.go  line_items.gen.go  password.go  password_test.go  segment_hooks.go  segments.gen.go  user_hooks.go  users.gen.go
internal/device/: device.go
internal/notification/: auction_result.go  auction_result_test.go  event_sender.go  event_sender_test.go  handler.go  handler_test.go  handler_v2.go  handler_v2_test.go  notification.go  notification_test.go
internal/sdkapi/: adapter_init_config.go  auction_handler.go  auction_handler_test.go  auction_handler_v2.go  auction_handler_v2_test.go  auction_v2_handler.go  auction_v2_handler_test.go  base_handler.go  bidding_handler.go  bidding_handler_test.go  click_handler.go  click_handler_test.go  config_handler.go  config_handler_test.go  errors.go  helper_test.go  loss_handler.go  loss_handler_test.go  request.go  reward_handler.go  reward_handler_test.go  sdkapi.go  service.go  show_handler.go  show_handler_test.go  stats_handler.go  stats_handler_test.go  stats_v2_handler.go  stats_v2_handler_test.go  versions.go  win_handler.go  win_handler_test.go
internal/segment/: segment.go  segment_test.go
internal/store/: app.go  app_demand_profile.go  app_demand_profile_test.go  app_test.go  auction_configuration.go  auction_configuration_test.go  country.go  country_test.go  demand_source.go  demand_source_account.go  demand_source_account_test.go  demand_source_test.go  line_item.go  line_item_test.go  resource_repo.go  segment.go  segment_test.go  store.go  store_test.go  user.go  user_test.go
perf/: README.md  wrk.lua
pkg/clock/: clock.go  clock_test.go
proxy/src/: adapter.rs  bidon_version.rs  codec.rs  extract.rs  extractor.rs  header.rs  lib.rs  main.rs  models.rs  (+2 more)
rust/bidon_proxy/: .gitignore  Cargo.toml  README.md  build.rs
rust/bidon_proxy/src/: api.rs  bidon_version.rs  context.rs  lib.rs  main.rs  models.rs
rust/bidon_proxy/src/auction/: echo.rs  mod.rs  simple.rs
rust/bidon_proxy/src/client/: mod.rs
rust/bidon_proxy/src/controllers/: adapter.rs  auction.rs  mod.rs
rust/bidon_proxy/src/impls/: mod.rs  proxy.rs
rust/bidon_proxy/src/server/: mod.rs  server_auth.rs
rust/bidon_proxy/tests/common/: mod.rs
scripts/: init-admin.sh
(+746 files in other folders)
