[package]
name = "bidon"
version = "0.0.1"
authors = ["bulat.fattakhov@appodeal.com", "ivan.doroshenko@appodeal.com"]
description = "Bidon OpenRTB 3.0"
license = "Apache-2.0" # TODO: Check the license
edition = "2021"

[[bin]]
name = "bidon"
path = "proxy/src/main.rs"

[lib]
name = "bidon"
path = "proxy/src/lib.rs"

[[test]]
name = "integration_test"
path = "proxy/tests/integration_tests.rs"

[dependencies]

async-trait = "0.1.24"
# gRPC and Protobuf
tonic = "0.11.0"
prost = { git = 'https://github.com/fabura/prosit' }
prost-types = { git = 'https://github.com/fabura/prosit' }

serde = "1.0.215"
serde_json = "1.0"
validator = { version = "0.16", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
swagger = { version = "6.1.0", features = ["serdejson"] }
uuid = { version = "1.3.1", features = ["serde", "v4"] }
hyper = { version = "0.14", features = ["full"] }

anyhow = "1.0.93"
derive_more = { version = "1.0.0", features = ["full"] }
derive-new = "0.7.0"

# Web
env_logger = { version = "0.7" }
axum = { version = "0.7.7", features = ["macros"] }
tokio = { version = "1.14", features = ["full"] }
thiserror = "2.0.3"

[dev-dependencies]
axum-test-helper = "0.4.0"
serde_json = "1.0.133"

[patch.crates-io]
prost = { git = 'https://github.com/fabura/prosit' }
prost-derive = { git = 'https://github.com/fabura/prosit' }
prost-types = { git = 'https://github.com/fabura/prosit' }
prost-build = { git = 'https://github.com/fabura/prosit' }

[build-dependencies]
tonic-build = "0.11.0"
prost-build = { git = 'https://github.com/fabura/prosit' }

[build]
rustflags = [
    "-W", "missing_docs", # detects missing documentation for public members
    "-W", "trivial_casts", # detects trivial casts which could be removed
    "-W", "trivial_numeric_casts", # detects trivial casts of numeric types which could be removed
    "-W", "unsafe_code", # usage of `unsafe` code
    "-W", "unused_qualifications", # detects unnecessarily qualified names
    "-W", "unused_extern_crates", # extern crates that are never used
    "-W", "unused_import_braces", # unnecessary braces around an imported item
    "-D", "warnings", # all warnings should be denied
]
