[package]
name = "galaxy"
version = "0.0.1"
authors = ["bulat.fattakhov@appodeal.com", "ivan.doroshenko@appodeal.com"]
description = "Galaxy OpenRTB 3.0"
license = "Apache-2.0" # TODO: Check the license
edition = "2021"

[features]
server = [
  "axum", "serde_ignored", "hyper", "regex", "percent-encoding", "url", "lazy_static", "tokio", "env_logger", "native-tls"
]
conversion = ["frunk", "frunk_derives", "frunk_core", "frunk-enum-core", "frunk-enum-derive"]

[target.'cfg(any(target_os = "macos", target_os = "windows", target_os = "ios"))'.dependencies]
native-tls = { version = "0.2", optional = true }
#hyper-tls = { version = "0.5", optional = true }

[dependencies]
# Common
async-trait = "0.1.24"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
swagger = { version = "6.1", features = ["serdejson", "server", "client", "tls", "tcp"] }
log = "0.4.0"
mime = "0.3"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
validator = { version = "0.16", features = ["derive"] }

# Crates included if required by the API definition
uuid = {version = "1.3.1", features = ["serde", "v4"]}

tonic = "0.12.3"
prost = "0.13.3"
hyper = {version = "0.14", features = ["full"], optional = true}
serde_ignored = {version = "0.1.1", optional = true}
url = {version = "2.1", optional = true}

# Client-specific

# Server, and client callback-specific
lazy_static = { version = "1.4", optional = true }
percent-encoding = {version = "2.1.0", optional = true}
regex = {version = "1.3", optional = true}

env_logger = { version = "0.7", optional = true }
axum = {version = "0.5", optional = true }
tokio = { version = "1.14", features = ["full"] , optional = true}
# native-tls = { version = "0.2" , optional = true}

# Conversion
frunk = { version = "0.4.0", optional = true }
frunk_derives = { version = "0.4.0", optional = true }
frunk_core = { version = "0.4.0", optional = true }
frunk-enum-derive = { version = "0.3.0", optional = true }
frunk-enum-core = { version = "0.3.0", optional = true }

[build-dependencies]
tonic-build = "0.12.3"

[build]
rustflags = [
    "-W", "missing_docs",  # detects missing documentation for public members
    "-W", "trivial_casts",  # detects trivial casts which could be removed
    "-W", "trivial_numeric_casts",  # detects trivial casts of numeric types which could be removed
    "-W", "unsafe_code",  # usage of `unsafe` code
    "-W", "unused_qualifications",  # detects unnecessarily qualified names
    "-W", "unused_extern_crates",  # extern crates that are never used
    "-W", "unused_import_braces",  # unnecessary braces around an imported item
    "-D", "warnings", # all warnings should be denied
]

[target.'cfg(not(any(target_os = "macos", target_os = "windows", target_os = "ios")))'.dev-dependencies]
tokio-openssl = "0.6"
openssl = "0.10"


[[bin]]
name = "galaxy"
path = "src/main.rs"
required-features = ["server"]
